css/chat.css
/* ... */
/* MEMBER LIST COLLAPSED */
.MemberListColumn.MemberListViewCompact .chatRoomMembers .friendGroup .groupName {
  margin-left: 0 !important;
  height: 32px !important;
  width: 32px !important;
}

.MemberListColumn.MemberListViewCompact {
  width: 32px !important;
}

.MemberListOptionsContainer {
  height: 32px !important;
}

.MemberListViewCompact .MemberListOptionsContainer .MemberListOption {
  margin-left: 0 !important;
}

.chatRoomGroupNavCollapseExpand, .MemberListOption {
  width: 32px !important;
  height: 32px !important;
  opacity: 1 !important;
  padding: 0 !important;
  transition: none !important;
  background-color: var(--zehn-color-button-fancy-background) !important;
}

.MemberListOption:hover {
  background-color: var(--zehn-color-button-fancy-background-hover) !important;
}

.MemberListOption:active {
  background-color: var(--zehn-color-button-fancy-background-active) !important;
}

.MemberListOption.ToggleMemberListView {
  padding: 0 !important;
}

.MemberListColumn.MemberListViewCompact .MemberListOption.ToggleMemberListView {
  margin-right: -12px !important;
}

.MemberListOption .SVGIcon_DoubleArrow {
  transform: none !important;
  transition: none !important;
}

.MemberListColumn.MemberListViewCompact .MemberListOption .SVGIcon_DoubleArrow {
  transform: none !important;
}

.MemberListOption .SVGIcon_DoubleArrow {
  width: 32px !important;
  height: 32px !important;
  margin: 0 !important;
  background-color: var(--zehn-color-icon-primary) !important;
  mask-repeat: no-repeat !important;
  mask-position: center !important;
  mask-size: var(--zehn-size-icon-medium) !important;
  -webkit-mask-image: var(--zehn-icon-chevron-left) !important;
}

.MemberListColumn.MemberListViewCompact .MemberListOption .SVGIcon_DoubleArrow {
  -webkit-mask-image: var(--zehn-icon-chevron-right) !important;
}

.MemberListOption .SVGIcon_DoubleArrow polyline {
  display: none !important;
}

.MemberListViewCompact .groupName {
  width: 32px !important;
  height: 32px !important;
  padding: 0 !important;
  margin: 0 !important;
}

/* MEMBER AVATAR COLLAPSED */
.MemberListViewCompact .MemberListOptionsContainer .CompactFriendsList .friend .avatarHolder {
  width: 32px !important;
  height: 32px !important;
}

.chatroomBucket_regular.Panel.Focusable:first-of-type {}

.chatroomBucket_regular.Panel.Focusable {
  height: 32px !important;
  max-height: 32px !important;
  position: relative !important;
  display: block !important;
  top: 32px !important;
}

.MemberListViewCompact .CompactFriendsList .SteamPlayerGroupFooter .SteamPlayerGroupFooterCount, .MemberListViewCompact .CompactFriendsList .friend .avatarHolder {
  width: 24px !important;
  height: 24px !important;
  margin: 4px !important;
}

.MemberListViewCompact .CompactFriendsList .friend {
  height: 24px !important;
  margin: 0 !important;
  padding: 0 !important;
}

/* MEMBER AVATAR OPEN */
.MemberListColumn:not(.MemberListViewCompact ) .chatroomBucket_regular.Panel.Focusable {
  padding: 0 !important;
  background-color: var(--zehn-color-list-background) !important;
}

.MemberListColumn:not(.MemberListViewCompact ) .chatroomBucket_regular.Panel.Focusable:hover {
  background-color: var(--zehn-color-list-background-hover) !important;
}

.MemberListColumn:not(.MemberListViewCompact ) .chatroomBucket_regular.Panel.Focusable:active {
  background-color: var(--zehn-color-list-background-active) !important;
}

/* OWNER */
.MemberListColumn .friend .rankIcon .SVGIcon_Crown, .ChatSpeaker.ChatRoomSpeaker .speaker .rankIcon .SVGIcon_Crown {
  display: none !important;
}

/* MEMBER */
.ChatSpeaker.ChatRoomSpeaker .speaker .rankIcon, .MemberListColumn .friend .rankIcon, .MemberListColumn .friend .chatMemberFriendIcon {
  display: none !important;
}

.MemberListColumn .friend .chatMemberFriendIcon svg {
  width: 0 !important;
  height: 0 !important;
  left: 0 !important;
  bottom: 0 !important;
}

.MemberListColumn ._4ZTzGZ5TTgFyfw1DcXLXS ._2Ri005Wg_uXDTa71kdRbcN, .MemberListColumn ._4ZTzGZ5TTgFyfw1DcXLXS ._2saJTAocZ9TnYXTGvnqUMC, .MemberListColumn ._4ZTzGZ5TTgFyfw1DcXLXS .nOdcT-MoOaXGePXLyPe0H {
  text-overflow: ellipsis !important;
  transition-delay: 0.2s !important;
}

.nOdcT-MoOaXGePXLyPe0H, ._2saJTAocZ9TnYXTGvnqUMC {
  transition: none !important;
  line-height: normal !important;
}

/* FILTER INPUT */
.MemberListColumn:not(.MemberListViewCompact) .MemberListOptionsContainer .socialInputContainer {
  width: 100% !important;
  max-height: 32px !important;
  height: 32px !important;
  margin: 0 !important;
  min-height: 32px !important;
}

.MemberListOptionsContainer .socialInputContainer .friendSearchInput[type="text"] {
  height: 32px !important;
  margin: 0 !important;
  padding-top: 0 !important;
  padding-bottom: 0 !important;
  font-size: var(--zehn-size-14) !important;
}

.MemberListOptionsContainer .socialInputContainer .inputContainer.no-drag {
  height: 32px !important;
}

.MemberListColumn.MemberListViewCompact .MemberListOptionsContainer .socialInputContainer .inputContainer.no-drag {
  width: 0 !important;
}

.MemberListColumn .friendSearchInput[type="text"] {
  color: var(--zehn-color-text-primary) !important;
  font-size: var(--zehn-size-14) !important;
  padding: 0 16px !important;
  width: 100% !important;
  height: 32px !important;
}

.MemberListColumn .inputContainer::after {
  content: "" !important;
  position: absolute !important;
  right: 0 !important;
  width: 32px !important;
  height: 32px !important;
  background-color: var(--zehn-color-icon-secondary) !important;
  mask-repeat: no-repeat !important;
  mask-position: center !important;
  mask-size: var(--zehn-size-icon-small) !important;
  -webkit-mask-image: var(--zehn-icon-search) !important;
  opacity: 1 !important;
}

.MemberListColumn.MemberListViewCompact .inputContainer:has(input:placeholder-shown)::after {
  opacity: 0 !important;
}
/* ... */

